--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*************** NAVBAR *************************/
+
 .nav-bar {
   width: 100%;
   height: 48px;
@@ -8,8 +10,10 @@
   float: right;
 }
 
-.container .left {
+.container #left,
+.container #right {
   margin-right: 10px;
+  /* flex-basis: 130.2px; */
 }
 
 .material-icons.md-18 {
@@ -25,19 +29,34 @@
   font-size: 48px;
 }
 
-.nav-bar ul {
+#left ul {
   list-style-type: none;
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
 }
 
-.nav-bar li {
+#left li {
   display: inline;
   line-height: 24px;
 }
 
-.nav-bar a {
+#left a {
   color: black;
   text-align: center;
-  padding: 14px 10px;
+  padding: 14px 5px;
+  text-decoration: none;
 }
+
+#right .md-24 {
+  margin-top: auto;
+  line-height: 10px;
+  padding: 15px 5px;
+}
+
+#right .md-36 {
+  margin-top: auto;
+  line-height: 24px;
+  padding: 15px 5px;
+}
+
+/******************** MAIN-LOGO *************************/
